--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -241,20 +241,32 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
         function playWithFriends() {
+            // Assuming socket is properly initialized elsewhere in your code
+
+            // Emit a 'loadfriends' event with the user's ID
             socket.emit('loadfriends', { userID: "<%= username %>" });
 
+            // Update the HTML content of an element with the ID 'container'
             document.getElementById("container").innerHTML = `
         <div class="friends">
             <h1>Friends</h1>
             <ul id="online-friends-list">
             </ul>
-        </div>`
+        </div>`;
+
+            // Listen for the 'online' event
             socket.on("online", (data) => {
+                // Get the list of online friends from the data
                 const onlineFriends = data.online;
-                console.log(onlineFriends)
+                console.log(onlineFriends);
+
+                // Get the 'online-friends-list' element
                 const onlineFriendsList = document.getElementById("online-friends-list");
+
+                // Clear the existing list
                 onlineFriendsList.innerHTML = "";
 
+                // Populate the list with online friends
                 onlineFriends.forEach((friend) => {
                     const li = document.createElement("li");
                     li.textContent = friend;
@@ -263,9 +275,10 @@
             });
         }
 
+
     </script>
     <script>
-        function home(){
+        function home() {
             window.location.href = "/";
         }
         function goBack() {
