--- a/games/truck.ejs
+++ b/games/truck.ejs
@@ -282,6 +282,9 @@
 <script>
     const trucks = document.querySelectorAll('.jump');
 
+    function exit(){
+        window.location = '/';
+    }
 
     function start() {
         const menu = document.getElementById('menu');
