--- a/frontend/global.css
+++ b/frontend/global.css
@@ -28,49 +28,6 @@ html {
   --text-color-2: rgb(255, 255, 255);
 }
 
-body {
-  min-height: 100vh;
-  background: var(--main-color-1) no-repeat;
-  background-attachment: fixed;
-}
-
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
-
-.header-overlay {
-  display: flex;
-  justify-content: space-between;
-  align-self: center;
-  width: 100%;
-  top: 0%;
-  left: 0%;
-  padding: 1% 1%;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.user > a {
-  padding-left: 20px;
-  font-size: 20px;
-  color: var(--text-color-2);
-}
-
-@media only screen and (max-width: 768px) {
-  .title {
-    margin: 15% 5%;
-    width: 90%;
-  }
-
-  .header-overlay {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    padding: 2% 1%;
-  }
-}
+} */
