--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,298 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
     <!-- <link rel="stylesheet" href="/frontend/global.css"> -->
-    <link rel="stylesheet" href="/frontend/animation.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Cosmic Arcade</title>
 </head>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: #333;
-        color: #fff;
-    }
-
-    header {
-        background-color: #333;
-        color: #fff;
-        padding: 10px;
-    }
-
-    nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    nav li {
-        display: inline;
-        margin-right: 20px;
-    }
-
-    nav a {
-        text-decoration: none;
-        color: #fff;
-    }
-
-    #hero {
-        background-image: url('space_bg.jpg');
-        background-size: cover;
-        height: 400px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #hero h1 {
-        font-size: 3em;
-        margin-bottom: 10px;
-    }
-
-    .cta-button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #ff9900;
-        color: #fff;
-        text-decoration: none;
-        cursor: pointer;
-        border-radius: 4px;
-        font-weight: bold;
-    }
-
-    #featured-games {
-        text-align: center;
-        padding: 40px 0;
-    }
-
-    .game-card {
-        display: inline-block;
-        width: 200px;
-        padding: 20px;
-        margin: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-
-    .game-card img {
-        width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        border-radius: 4px;
-    }
-
-    .addFriend {
-        display: inline-block;
-        width: 200px;
-        padding: 20px;
-        margin: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-
-    .addFriend button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #ff9900;
-        color: #fff;
-        border-style: none;
-        text-decoration: none;
-        cursor: pointer;
-        border-radius: 4px;
-        font-weight: bold;
-    }
-
-    footer {
-        text-align: center;
-        padding: 10px;
-        background-color: #333;
-        color: #fff;
-    }
-
-    .chattingBox {
-        display: inline-block;
-        width: 60%;
-        height: 600px;
-        padding: 20px;
-        margin: 10px auto;
-        border: 1px solid #ccc;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        border-radius: 4px;
-    }
-
-    #history {
-        background-color: #ccc;
-        width: 90%;
-        height: 550px;
-        border-radius: 6px;
-        margin: auto;
-    }
-
-    .typeMsg {
-        display: flex;
-        justify-content: space-between;
-        margin: 10px auto;
-    }
-
-    .typeMsg input {
-        height: 45px;
-        width: 700px;
-        border-radius: 6px;
-        border-style: none;
-    }
-
-    .typeMsg button {
-        height: 47px;
-        width: 100px;
-        border-radius: 6px;
-        border-style: none;
-        margin-left: 2px;
-        background-color: #ff9900;
-    }
-
-    @media only screen and (max-width: 768px) {
-        .game-card {
-            display: inline-block;
-            width: 70%;
-            padding: 20px;
-            margin: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .friends {
-            background-color: var(--main-bg-color-2);
-            width: 80%;
-            height: max-content;
-            border-radius: 4px;
-            margin-left: 10%;
-            padding-left: 2%;
-        }
-
-        .chattingBox {
-            display: inline-block;
-            width: 90%;
-            height: 600px;
-            padding: 10px;
-            margin: 10px auto;
-            border: 1px solid #ccc;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            border-radius: 4px;
-        }
-
-        #history {
-            background-color: #ccc;
-            width: 95%;
-            height: 550px;
-            border-radius: 6px;
-            margin: auto;
-        }
-
-        .typeMsg {
-            display: flex;
-            justify-content: space-between;
-            margin: 10px auto;
-        }
-
-        .typeMsg input {
-            height: 45px;
-            width: 300px;
-            border-radius: 6px;
-            border-style: none;
-        }
-
-        .typeMsg button {
-            height: 47px;
-            width: 60px;
-            border-radius: 6px;
-            border-style: none;
-            margin-left: 2px;
-            background-color: #ff9900;
-        }
-    }
-</style>
 
 <body>
-    <header class="header-overlay header-logged">
-        <div class="novastar">
-            <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="/<%= username %>"><span class=" material-symbols-outlined"
-                            style="color: white;">account_circle</span>
-                        <%= username %>
-                    </a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="upload">
-<button onclick="createRepository()">createRepository</button>
-    </div>
-    <section id="featured-games">
-        <h2>Featured Games</h2>
-        <div class="game-card">
-            <img src="../assets/tictactoewlp.png" alt="Game 1">
-            <h3>Tic Tac Toe</h3>
-            <a onclick="TicTacToe_online()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/cosmicshootwlp.png" alt="Game 2">
-            <h3>Cosmic shoot</h3>
-            <a onclick="cosmicShoot()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/rpswlp.png" alt="Game 2">
-            <h3>Rock Paper Scissors</h3>
-            <a onclick="r_p_c()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/chesswlp.png" alt="Game 2">
-            <h3>Chess</h3>
-            <a onclick="chess()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/truck.png" alt="Game 2">
-            <h3>game#5</h3>
-            <a onclick="truck()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/bgimg2.webp" alt="Game 2">
-            <h3>game#6</h3>
-            <a onclick="paint()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/satellite_1.png" alt="Game 2">
-            <h3>game#7</h3>
-            <a onclick="game7()" class="cta-button">Play Now</a>
-        </div>
-        <div class="game-card">
-            <img src="../assets/bgimg1.webp" alt="Game 2">
-            <h3>game#8</h3>
-            <a onclick="game7()" class="cta-button">Play Now</a>
-        </div>
-    </section>
-    <div class="addFriend">
-        <label>Add Friend</label>
-        <input type="text" id="addFriend" placeholder="Enter User Id" />
-        <button onclick="addFriend()">Add</button>
-    </div>
-    <div class="chattingBox">
-        <div class="friends">
 
+    <body class="Desktop1" style="width: 1440px; height: 2321px; position: relative; background: #181A23">
+        <div class="Rectangle1"
+            style="width: 1398px; height: 682px; left: 21px; top: 156px; position: absolute; background: #282828; border-radius: 10px">
         </div>
-        <div id="history"></div>
-        <div class="typeMsg">
-            <input type="text" id="message" />
-            <button id="send" onclick="send()">Send</button>
+        <div class="Rectangle2"
+            style="width: 523px; height: 682px; left: 22px; top: 156px; position: absolute; background: #1F1F1F; border-radius: 10px">
         </div>
-    </div>
+        <div class="Rectangle7"
+            style="width: 490px; height: 64px; left: 36px; top: 180px; position: absolute; background: #969696; border-radius: 10px">
+        </div>
+        <div class="Rectangle3"
+            style="width: 741px; height: 51px; left: 561px; top: 766px; position: absolute; background: white; border-radius: 10px; border: 1px #0047FF solid; backdrop-filter: blur(4px)">
+        </div>
+        <div class="TypeMassage"
+            style="left: 599px; top: 778px; position: absolute; color: #6C6C6C; font-size: 22px; font-family: Inter; font-weight: 300; word-wrap: break-word">
+            type massage...</div>
+        <div class="Rectangle4"
+            style="width: 71px; height: 51px; left: 1316px; top: 766px; position: absolute; background: #0032E3; border-radius: 15px">
+        </div>
+        <div class="Ellipse1"
+            style="width: 63px; height: 54px; left: 36px; top: 40px; position: absolute; border-radius: 9999px"></div>
+    </body>
+
     <script>
         function r_p_c() {
             window.location.href = "/<%= username %>/Rock-Paper-Scissors";
@@ -472,6 +210,5 @@
         }
 
     </script>
-</body>
 
 </html>
